# hello-port-audio

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Envelope.hpp  MidiNote.hpp  MidiNotes.hpp  MidiPitch.hpp  PortAudioStream.hpp  StreamState.hpp  constants.hpp
src/: Envelope.cpp  PortAudioStream.cpp  StreamState.cpp  main.cpp
